modified connection to local

--- a/keycloak.json.j2
+++ b/keycloak.json.j2
@@ -1,6 +1,6 @@
 {
   "realm": "AppStack",
-  "auth-server-url": "http://18.219.109.160:8080/auth/",
+  "auth-server-url": "http://student.prodops-fico.com/auth/",
   "ssl-required": "none",
   "resource": "student",
   "verify-token-audience": true,
